--- a/style.css
+++ b/style.css
@@ -74,11 +74,26 @@ img {
 
 /*MEDIA QUERY*/
 @media screen and (max-width:419px){
-  #lezioni .row>.left,
-  #lezioni .row>.right {
+.row {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+}
+
+h1 {
+  font-size: 16px;
+}
+
+#lezioni .row>.left,
+#lezioni .row>.right {
   width: 100%;
   float: none;
   padding-top: 10px;
+}
+
+h3 {
+  font-size: 11px;
 }
 
 #steps .row>.left,
@@ -87,6 +102,17 @@ img {
   float: none;
   width: 100%;
   padding-top: 20px;
+}
+
+img {
+  height: 100px;
+}
+
+#why .row>.first,
+#why .row>.second,
+#why .row>.third {
+  width: 100%;
+  margin-top: 20px;
 }
 }
 
